===================
http://hawkscope.googlecode.com

Changes in version 0.6.1 (2009-06-??)
-------------------------------------
* Possibility to rename Quick Access items
  http://code.google.com/p/hawkscope/issues/detail?id=15
* Disabled plugins are no longer class-loaded
  http://code.google.com/p/hawkscope/issues/detail?id=99
* Hawkscope icon is no longer invisible on dark backgrounds
  
Changes in version 0.6.0 (2009-04-04)
-------------------------------------
* Plugins can no longer break the rest of Hawkscope menu
  http://code.google.com/p/hawkscope/issues/detail?id=84
* Native icon themes for supported operating systems
  http://code.google.com/p/hawkscope/issues/detail?id=83
* Unified HTTP authentication mechanism for version checks and plugins that 
  use network connection 
  http://code.google.com/p/hawkscope/issues/detail?id=81  
* Ability to show/hide known file icons. Mac .app extension is always hidden.
  http://code.google.com/p/hawkscope/issues/detail?id=78
* Implemented checking for plugin updates
  http://code.google.com/p/hawkscope/issues/detail?id=53

Changes in version 0.5.4 (2009-03-21)
-------------------------------------
* Gmail Checker plugin
  http://code.google.com/p/hawkscope/issues/detail?id=76
* Open With plugin now saves/loads custom application paths well in Windows
  http://code.google.com/p/hawkscope/issues/detail?id=73
* Open With plugin was failing to open files with spaces on Linux 
  http://code.google.com/p/hawkscope/issues/detail?id=72
* Various enhancements of Execute plugin
  http://code.google.com/p/hawkscope/issues/detail?id=71
* Twitter plugin auto-recovery after network failures
  http://code.google.com/p/hawkscope/issues/detail?id=70    
* Improved keyboard navigation
  http://code.google.com/p/hawkscope/issues/detail?id=69
* No more problems with opening huge folders
  http://code.google.com/p/hawkscope/issues/detail?id=40  


Changes in version 0.5.3 (2009-03-13)
-------------------------------------